Agregado archivo Dockerfile y configuraciones para Docker