@@ -2,6 +2,7 @@ package com.micro.springboot.app.productos.controllers;
 
 import java.util.List;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -40,7 +41,7 @@ public class ProductoController {
 					prod.setPort(webServerAppCtxt.getWebServer().getPort());
 					return prod;
 				})
-				.toList();
+				.collect(Collectors.toList());
 	}
 	
 	@GetMapping("/ver/{id}")
